---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP044 [*] Use `*` for unpacking
 --> UP044.py:6:17
  |
6 | class C(Generic[Unpack[Shape]]):
  |                 ^^^^^^^^^^^^^
7 |     pass
  |
help: Convert to `*` for unpacking
  |
6 - class C(Generic[Unpack[Shape]]):
6 + class C(Generic[*Shape]):
  |
note: This is an unsafe fix and may change runtime behavior

UP044 [*] Use `*` for unpacking
  --> UP044.py:10:17
   |
10 | class D(Generic[Unpack[Shape]]):
   |                 ^^^^^^^^^^^^^
11 |     pass
   |
help: Convert to `*` for unpacking
   |
10 - class D(Generic[Unpack[Shape]]):
10 + class D(Generic[*Shape]):
   |
note: This is an unsafe fix and may change runtime behavior

UP044 [*] Use `*` for unpacking
  --> UP044.py:14:14
   |
14 | def f(*args: Unpack[tuple[int, ...]]):
   |              ^^^^^^^^^^^^^^^^^^^^^^^
15 |     pass
   |
help: Convert to `*` for unpacking
   |
14 - def f(*args: Unpack[tuple[int, ...]]):
14 + def f(*args: *tuple[int, ...]):
   |
note: This is an unsafe fix and may change runtime behavior

UP044 [*] Use `*` for unpacking
  --> UP044.py:18:14
   |
18 | def f(*args: Unpack[other.Type]):
   |              ^^^^^^^^^^^^^^^^^^
19 |     pass
   |
help: Convert to `*` for unpacking
   |
18 - def f(*args: Unpack[other.Type]):
18 + def f(*args: *other.Type):
   |
note: This is an unsafe fix and may change runtime behavior

UP044 [*] Use `*` for unpacking
  --> UP044.py:22:27
   |
22 | def f(*args: Generic[int, Unpack[int]]):
   |                           ^^^^^^^^^^^
23 |     pass
   |
help: Convert to `*` for unpacking
   |
22 - def f(*args: Generic[int, Unpack[int]]):
22 + def f(*args: Generic[int, *int]):
   |
note: This is an unsafe fix and may change runtime behavior
